@@ -187,7 +187,7 @@ class ApiQueryAllpages extends ApiQueryGeneratorBase {
 	}
 
 	public function getAllowedParams() {
-		global $wgRestrictionTypes, $wgRestrictionLevels;
+		global $wgRestrictionLevels;
 
 		return array(
 			'from' => null,
@@ -212,7 +212,7 @@ class ApiQueryAllpages extends ApiQueryGeneratorBase {
 				ApiBase::PARAM_TYPE => 'integer',
 			),
 			'prtype' => array(
-				ApiBase::PARAM_TYPE => $wgRestrictionTypes,
+				ApiBase::PARAM_TYPE => Title::getFilteredRestrictionTypes( true ),
 				ApiBase::PARAM_ISMULTI => true
 			),
 			'prlevel' => array(
